# crossplatform_qt_template

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_deploy.sh  build_number.sh  conanfile.py  config.h.sh  config.ini
.github/workflows/: build.yml  build_and_release.yml
android/: AndroidManifest.xml  AndroidManifest.xml.in
cmake/: CPackPerGenerator.cmake
rcc/: rcc.qrc  rcc.sh
scripts/: build.sh  build_helper.sh  build_number.sh  config.h.sh  deploy.sh  package.sh  translations.sh
src/: config.h  config.h.in  language.cpp  language.h  main.cpp  settings.cpp  settings.h  theme.cpp  theme.h
